Add incoming & outgoing aliases to .gitconfig

--- a/.gitconfig
+++ b/.gitconfig
@@ -7,6 +7,8 @@
 	old = for-each-ref refs/remotes/origin/ --sort=-committerdate --format='%(HEAD) %(color:yellow)%(refname:short)%(color:reset) - %(color:red)%(objectname:short)%(color:reset) - %(authorname) (%(color:green)%(committerdate:relative)%(color:reset))'
   # Show the diff between the latest commit and the current state
 	d = !"git diff-index --quiet HEAD -- || clear; git --no-pager diff --patch-with-stat"
+	incoming = "!git remote update -p; git log ..@{u}"
+	outgoing = log @{u}..
 [branch]
 	autosetuprebase = always
 [user]
