--- a/.gitconfig
+++ b/.gitconfig
@@ -9,6 +9,7 @@
 	d = !"git diff-index --quiet HEAD -- || clear; git --no-pager diff --patch-with-stat"
 	incoming = "!git remote update -p; git log ..@{u}"
 	outgoing = log @{u}..
+	recent-branches = for-each-ref --sort=-committerdate --count=10 --format='%(refname:short)' refs/heads/
 [branch]
 	autosetuprebase = always
 [push]
@@ -43,3 +44,10 @@
 [core]
 	pager = diff-so-fancy | less --tabs=4 -RFX
 	editor = vim
+[user]
+	name = Joshua
+	email = joshuaegclark@gmail.com
+[fetch]
+	prune = true
+[pull]
+	rebase = true
