--- a/.gitconfig
+++ b/.gitconfig
@@ -10,6 +10,7 @@
 	incoming = "!git remote update -p; git log ..@{u}"
 	outgoing = log @{u}..
 	recent-branches = for-each-ref --sort=-committerdate --count=10 --format='%(refname:short)' refs/heads/
+        rb = recent-branches 
 [branch]
 	autosetuprebase = always
 [push]
